// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AddNewQuestionForm /> renders correctly 1`] = `
<form>
  <Field
    component={[Function]}
    label={
      <FormattedMessage
        id="global.title"
        values={Object {}}
      />
    }
    name="question"
    type="text"
  />
  <Field
    component={[Function]}
    name="required"
    type="checkbox"
  >
    <FormattedMessage
      id="global.admin.required"
      values={Object {}}
    />
  </Field>
  <Field
    component={[Function]}
    label="Type"
    name="type"
    type="select"
  >
    <option
      disabled={true}
      value=""
    >
      global.select
    </option>
    <option
      value={0}
    >
      global.question.types.text
    </option>
    <option
      value={4}
    >
      global.question.types.select
    </option>
  </Field>
</form>
`;

exports[`<AddNewQuestionForm /> renders correctly for multiple choices 1`] = `
<form>
  <Field
    component={[Function]}
    label={
      <FormattedMessage
        id="global.title"
        values={Object {}}
      />
    }
    name="question"
    type="text"
  />
  <Field
    component={[Function]}
    name="required"
    type="checkbox"
  >
    <FormattedMessage
      id="global.admin.required"
      values={Object {}}
    />
  </Field>
  <Field
    component={[Function]}
    label="Type"
    name="type"
    type="select"
  >
    <option
      disabled={true}
      value=""
    >
      global.select
    </option>
    <option
      value={0}
    >
      global.question.types.text
    </option>
    <option
      value={4}
    >
      global.question.types.select
    </option>
  </Field>
  <FieldArray
    component={[Function]}
    name="choices"
  />
</form>
`;
